<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri"
        android:layout_below="@+id/location_editext"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLocation"
        android:text="@string/button_loc"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/share_edittext"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/button_share"
        android:layout_alignBaseline="@+id/open_location_button"
        android:layout_alignBottom="@+id/open_location_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openWebsite"
        android:text="@string/button_uri"
        android:layout_below="@+id/website_edittext"
        android:layout_alignStart="@+id/share_text_button" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"
        android:layout_below="@+id/open_website_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/location_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_loc"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>